# contract/src/main/java/io/pravega/schemaregistry/contract/generated/rest/server/api/ApplicationsApiService.java
@@ -25,6 +25,8 @@ public abstract class ApplicationsApiService {
     public abstract Response addReader(String appId,AddReaderRequest addReaderRequest,SecurityContext securityContext) throws NotFoundException;
     public abstract Response addWriter(String appId,AddWriterRequest addWriterRequest,SecurityContext securityContext) throws NotFoundException;
     public abstract Response createApplication(CreateApplicationRequest createApplicationRequest,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response deleteReaderFromApp(String appId,String groupId,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response deleteWriterFromApp(String appId,String groupId,SecurityContext securityContext) throws NotFoundException;
     public abstract Response getApplication(String appId,SecurityContext securityContext) throws NotFoundException;
     public abstract Response listReaders(String groupId,SecurityContext securityContext) throws NotFoundException;
     public abstract Response listWriters(String groupId,SecurityContext securityContext) throws NotFoundException;
