# serializers/src/main/java/io/pravega/schemaregistry/serializers/AvroSerializer.java
@@ -10,9 +10,9 @@
 package io.pravega.schemaregistry.serializers;
 
 import io.pravega.schemaregistry.cache.EncodingCache;
-import io.pravega.schemaregistry.contract.data.SchemaInfo;
-import io.pravega.schemaregistry.client.SchemaRegistryClient;
+import io.pravega.schemaregistry.client.RegistryClient;
 import io.pravega.schemaregistry.codec.Codec;
+import io.pravega.schemaregistry.contract.data.SchemaInfo;
 import io.pravega.schemaregistry.schemas.AvroSchema;
 import lombok.SneakyThrows;
 import org.apache.avro.Schema;
@@ -29,7 +29,7 @@ import java.io.OutputStream;
 
 class AvroSerializer<T> extends AbstractPravegaSerializer<T> {
     private final AvroSchema<T> avroSchema;
-    AvroSerializer(String groupId, String appId, SchemaRegistryClient client, AvroSchema<T> schema,
+    AvroSerializer(String groupId, String appId, RegistryClient client, AvroSchema<T> schema,
                    Codec codec, boolean registerSchema, EncodingCache encodingCache) {
         super(groupId, appId, client, schema, codec, registerSchema, encodingCache);
         this.avroSchema = schema;
