# serializers/src/main/java/io/pravega/schemaregistry/serializers/MultiplexedDeserializer.java
@@ -11,7 +11,7 @@ package io.pravega.schemaregistry.serializers;
 
 import com.google.common.base.Preconditions;
 import io.pravega.schemaregistry.cache.EncodingCache;
-import io.pravega.schemaregistry.client.SchemaRegistryClient;
+import io.pravega.schemaregistry.client.RegistryClient;
 import io.pravega.schemaregistry.contract.data.CodecType;
 import io.pravega.schemaregistry.contract.data.SchemaInfo;
 
@@ -22,11 +22,12 @@ import java.util.function.BiFunction;
 class MultiplexedDeserializer<T> extends AbstractPravegaDeserializer<T> {
     private final Map<String, AbstractPravegaDeserializer<T>> deserializers;
 
-    MultiplexedDeserializer(String groupId, String appId, SchemaRegistryClient client,
+    MultiplexedDeserializer(String groupId, String appId, RegistryClient client,
                             Map<String, AbstractPravegaDeserializer<T>> deserializers,
                             BiFunction<CodecType, ByteBuffer, ByteBuffer> decode,
+                            boolean registerSchema,
                             EncodingCache encodingCache) {
-        super(groupId, appId, client, null, false, decode, encodingCache);
+        super(groupId, appId, client, null, false, decode, registerSchema, encodingCache);
         this.deserializers = deserializers; 
     }
 
