# serializers/src/main/java/io/pravega/schemaregistry/serializers/ProtobufDeserlizer.java
@@ -12,6 +12,7 @@ package io.pravega.schemaregistry.serializers;
 import com.google.common.base.Preconditions;
 import com.google.protobuf.GeneratedMessageV3;
 import io.pravega.schemaregistry.cache.EncodingCache;
+import io.pravega.schemaregistry.client.RegistryClient;
 import io.pravega.schemaregistry.client.SchemaRegistryClient;
 import io.pravega.schemaregistry.contract.data.CodecType;
 import io.pravega.schemaregistry.contract.data.SchemaInfo;
@@ -23,10 +24,10 @@ import java.util.function.BiFunction;
 
 public class ProtobufDeserlizer<T extends GeneratedMessageV3> extends AbstractPravegaDeserializer<T> {
     private final ProtobufSchema<T> protobufSchema;
-    ProtobufDeserlizer(String groupId, String appId, SchemaRegistryClient client,
+    ProtobufDeserlizer(String groupId, String appId, RegistryClient client,
                        ProtobufSchema<T> schema, BiFunction<CodecType, ByteBuffer, ByteBuffer> decode,
-                       EncodingCache encodingCache) {
-        super(groupId, appId, client, schema, true, decode, encodingCache);
+                       boolean registerSchema, EncodingCache encodingCache) {
+        super(groupId, appId, client, schema, true, decode, registerSchema, encodingCache);
         Preconditions.checkNotNull(schema);
         this.protobufSchema = schema;
     }
