# serializers/src/main/java/io/pravega/schemaregistry/serializers/ProtobufSerializer.java
@@ -11,15 +11,16 @@ package io.pravega.schemaregistry.serializers;
 
 import com.google.protobuf.Message;
 import io.pravega.schemaregistry.cache.EncodingCache;
-import io.pravega.schemaregistry.client.SchemaRegistryClient;
+import io.pravega.schemaregistry.client.RegistryClient;
 import io.pravega.schemaregistry.codec.Codec;
 import io.pravega.schemaregistry.contract.data.SchemaInfo;
 import io.pravega.schemaregistry.schemas.ProtobufSchema;
 import lombok.SneakyThrows;
+
 import java.io.OutputStream;
 
 class ProtobufSerializer<T extends Message> extends AbstractPravegaSerializer<T> {
-    ProtobufSerializer(String groupId, String appId, SchemaRegistryClient client, ProtobufSchema<T> schema,
+    ProtobufSerializer(String groupId, String appId, RegistryClient client, ProtobufSchema<T> schema,
                        Codec codec, boolean registerSchema, EncodingCache encodingCache) {
         super(groupId, appId, client, schema, codec, registerSchema, encodingCache);
     }
