# server/src/main/java/io/pravega/schemaregistry/server/rest/v1/ApiV1.java
@@ -338,72 +338,103 @@ public final class ApiV1 {
                 throws NotFoundException;
     }
 
+    @Path("/v1/applications")
+    @io.swagger.annotations.Api(description = "the groups API")
     public interface ApplicationsApi {
 
         @POST
         @Path("/{appId}/reader")
-        @Consumes({ "application/json" })
-        @io.swagger.annotations.ApiOperation(value = "", notes = "Add new reader to application", response = Void.class, tags={ "Application", })
+        @Consumes({"application/json"})
+        @io.swagger.annotations.ApiOperation(value = "", notes = "Add new reader to application", response = Void.class, tags = {"Application", })
         @io.swagger.annotations.ApiResponses(value = {
                 @io.swagger.annotations.ApiResponse(code = 201, message = "Successfully added reader", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 409, message = "Schema incompatible", response = Void.class),
-                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while adding reader to group", response = Void.class) })
-        void addReader(@ApiParam(value = "appId",required=true) @PathParam("appId") String appId,
-                                  @ApiParam(value = "schema version" ,required=true) AddReaderRequest addReaderRequest,
-                                  @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while adding reader to group", response = Void.class)})
+        void addReader(@ApiParam(value = "appId", required = true) @PathParam("appId") String appId,
+                       @ApiParam(value = "schema version", required = true) AddReaderRequest addReaderRequest,
+                       @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
+
         @POST
         @Path("/{appId}/writer")
-        @Consumes({ "application/json" })
-        @io.swagger.annotations.ApiOperation(value = "", notes = "Add new writer to application", response = Void.class, tags={ "Application", })
+        @Consumes({"application/json"})
+        @io.swagger.annotations.ApiOperation(value = "", notes = "Add new writer to application", response = Void.class, tags = {"Application", })
         @io.swagger.annotations.ApiResponses(value = {
                 @io.swagger.annotations.ApiResponse(code = 201, message = "Successfully added writer", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 409, message = "Schema incompatible", response = IncompatibleSchema.class),
-                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while adding writer to group", response = Void.class) })
-        void addWriter(@ApiParam(value = "appId",required=true) @PathParam("appId") String appId,
-                                  @ApiParam(value = "schema version" ,required=true) AddWriterRequest addWriterRequest,
-                                  @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while adding writer to group", response = Void.class)})
+        void addWriter(@ApiParam(value = "appId", required = true) @PathParam("appId") String appId,
+                       @ApiParam(value = "schema version", required = true) AddWriterRequest addWriterRequest,
+                       @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
+
         @POST
-        @Consumes({ "application/json" })
-        @io.swagger.annotations.ApiOperation(value = "", notes = "Create a new Application", response = Void.class, tags={ "Group", })
+        @Consumes({"application/json"})
+        @io.swagger.annotations.ApiOperation(value = "", notes = "Create a new Application", response = Void.class, tags = {"Group", })
         @io.swagger.annotations.ApiResponses(value = {
                 @io.swagger.annotations.ApiResponse(code = 201, message = "Successfully added group", response = Void.class),
                 @io.swagger.annotations.ApiResponse(code = 409, message = "Group with given name already exists", response = Void.class),
-                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while creating a Group", response = Void.class) })
-        void createApplication(@ApiParam(value = "The Group configuration" ,required=true) CreateApplicationRequest createApplicationRequest,
-                                          @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while creating a Group", response = Void.class)})
+        void createApplication(@ApiParam(value = "The Group configuration", required = true) CreateApplicationRequest createApplicationRequest,
+                               @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
+
         @GET
         @Path("/{appId}")
-        @Produces({ "application/json" })
-        @io.swagger.annotations.ApiOperation(value = "", notes = "Fetch the application", response = Application.class, tags={ "Group", })
+        @Produces({"application/json"})
+        @io.swagger.annotations.ApiOperation(value = "", notes = "Fetch the application", response = Application.class, tags = {"Group", })
         @io.swagger.annotations.ApiResponses(value = {
                 @io.swagger.annotations.ApiResponse(code = 200, message = "Found Group properties", response = Application.class),
                 @io.swagger.annotations.ApiResponse(code = 404, message = "Group with given name not found", response = Void.class),
-                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching Group details", response = Void.class) })
-        void getApplication(@ApiParam(value = "appId",required=true) @PathParam("appId") String appId,
-                                       @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching Group details", response = Void.class)})
+        void getApplication(@ApiParam(value = "appId", required = true) @PathParam("appId") String appId,
+                            @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
+
         @GET
         @Path("/groups/{groupId}/readers")
-        @Produces({ "application/json" })
-        @io.swagger.annotations.ApiOperation(value = "", notes = "List all writer applications in group", response = ApplicationsInGroup.class, tags={ "Application", })
+        @Produces({"application/json"})
+        @io.swagger.annotations.ApiOperation(value = "", notes = "List all writer applications in group", response = ApplicationsInGroup.class, tags = {"Application", })
         @io.swagger.annotations.ApiResponses(value = {
                 @io.swagger.annotations.ApiResponse(code = 200, message = "List of all writers in group", response = ApplicationsInGroup.class),
-                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching the list of writers in Groups", response = Void.class) })
-        void listReaders(@ApiParam(value = "groupId",required=true) @PathParam("groupId") String groupId,
-                                    @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching the list of writers in Groups", response = Void.class)})
+        void listReaders(@ApiParam(value = "groupId", required = true) @PathParam("groupId") String groupId,
+                         @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
+
         @GET
         @Path("/groups/{groupId}/writers")
-        @Produces({ "application/json" })
-        @io.swagger.annotations.ApiOperation(value = "", notes = "List all writer applications in group", response = ApplicationsInGroup.class, tags={ "Application", })
+        @Produces({"application/json"})
+        @io.swagger.annotations.ApiOperation(value = "", notes = "List all writer applications in group", response = ApplicationsInGroup.class, tags = {"Application", })
         @io.swagger.annotations.ApiResponses(value = {
                 @io.swagger.annotations.ApiResponse(code = 200, message = "List of all writers in group", response = ApplicationsInGroup.class),
-                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching the list of writers in Groups", response = Void.class) })
-        void listWriters(@ApiParam(value = "groupId",required=true) @PathParam("groupId") String groupId,
-                                    @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while fetching the list of writers in Groups", response = Void.class)})
+        void listWriters(@ApiParam(value = "groupId", required = true) @PathParam("groupId") String groupId,
+                         @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                throws NotFoundException;
+
+        @DELETE
+        @Path("/{appId}/groups/{groupId}/reader")
+        @io.swagger.annotations.ApiOperation(value = "", notes = "Delete a reader from an app", response = Void.class, tags = {"Application", })
+        @io.swagger.annotations.ApiResponses(value = {
+                @io.swagger.annotations.ApiResponse(code = 204, message = "Successfully deleted reader", response = Void.class),
+                @io.swagger.annotations.ApiResponse(code = 404, message = "App not found", response = Void.class),
+                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while deleting the reader app", response = Void.class)})
+        void deleteReaderFromApp(@ApiParam(value = "appId", required = true) @PathParam("appId") String appId,
+                                            @ApiParam(value = "groupId", required = true) @PathParam("groupId") String groupId,
+                                            @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
+                throws NotFoundException;
+
+        @DELETE
+        @Path("/{appId}/groups/{groupId}/writer")
+        @io.swagger.annotations.ApiOperation(value = "", notes = "Delete a writer from an app", response = Void.class, tags = {"Application", })
+        @io.swagger.annotations.ApiResponses(value = {
+                @io.swagger.annotations.ApiResponse(code = 204, message = "Successfully deleted writer", response = Void.class),
+                @io.swagger.annotations.ApiResponse(code = 404, message = "App not found", response = Void.class),
+                @io.swagger.annotations.ApiResponse(code = 500, message = "Internal server error while deleting the writer app", response = Void.class)})
+        void deleteWriterFromApp(@ApiParam(value = "appId", required = true) @PathParam("appId") String appId,
+                                            @ApiParam(value = "groupId", required = true) @PathParam("groupId") String groupId,
+                                            @Context SecurityContext securityContext, @Suspended AsyncResponse asyncResponse)
                 throws NotFoundException;
     }
 }
